[project]
name = "ReimAgent"
version = "0.1.0"
description = "ReimAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "markitdown[all]~=0.1.0a1",
    "openai>=1.60.0",
    "pytesseract",
    "scikit-learn>=1.6.1",
    "libtesseract-dev",
    "langchain_groq",
]

[project.scripts]
ReimAgent = "ReimAgent.main:run"
run_crew = "ReimAgent.main:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
